client/src/app/globals.css
@import "tailwindcss";

button {
    cursor: pointer;
}

:root {
    --background: #ffffff;
    --foreground: #171717;
    --muted-background: #1f1e1e;
}

@theme inline {
    --font-oswald: var(--font-oswald);
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-space-grotesk: var(--font-space-grotesk);
    --color-muted-background: var(--muted-background);
}

@media (prefers-color-scheme: dark) {
    :root {
        --background: #0a0a0a;
        --foreground: #ededed;
    }
}

body {
    background: var(--background);
    color: var(--foreground);
    font-family: var(--font-space-grotesk), sans-serif;
    overscroll-behavior: none;
    -ms-overflow-style: none;
}

.hide-scroll {
    scrollbar-width: none;
    -ms-overflow-style: none;
}

.hide-scroll::-webkit-scrollbar {
    display: none;
}

input,
input:focus,
input:active,
textarea,
textarea:focus,
textarea:active {
    outline: none;
}

.cards-container {
    height: 95vh;
    display: flex;
    padding: 0px 5rem;
    position: relative;
    width: max-content;
    align-items: center;
    justify-content: center;

    > .cards {
        height: 80%;
        display: flex;
        position: relative;
        flex-direction: row;

        > .card {
            width: 354px;
            padding: 1rem;
            display: flex;
            flex-shrink: 0;
            flex-direction: column;
            border: 1px solid #808080;
            justify-content: space-between;
        }
    }
}

.scroll-container {
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    will-change: transform;
    overflow-x: hidden;
}

